[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/Screens/Inventory/inventory.png" type="Texture" id=1]
[ext_resource path="res://assets/Fonts/moiktext.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/Player/walk.png" type="Texture" id=3]
[ext_resource path="res://assets/Screens/Inventory/empty.png" type="Texture" id=4]
[ext_resource path="res://assets/Player/normal.png" type="Texture" id=5]
[ext_resource path="res://src/Inventory.gd" type="Script" id=6]
[ext_resource path="res://assets/Screens/Inventory/graybutton1.png" type="Texture" id=7]
[ext_resource path="res://assets/Screens/Inventory/graybutton2.png" type="Texture" id=8]
[ext_resource path="res://assets/Screens/Inventory/bluebutton1.png" type="Texture" id=9]
[ext_resource path="res://assets/Screens/Inventory/bluebutton2.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="DynamicFont" id=3]
size = 80
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Inventory" type="Control"]
anchor_right = 1.002
anchor_bottom = 1.002
margin_left = 2.52271
margin_top = -36.1585
margin_right = 2.47461
margin_bottom = -36.3586
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="inventory" type="Sprite" parent="."]
position = Vector2( 500, 300 )
texture = ExtResource( 1 )

[node name="HealthLabel" type="Label" parent="."]
margin_left = 262.397
margin_top = 357.728
margin_right = 379.397
margin_bottom = 426.728
custom_fonts/font = SubResource( 1 )
text = "5/5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KeyLabel" type="Label" parent="."]
margin_left = 262.397
margin_top = 441.733
margin_right = 320.397
margin_bottom = 492.733
custom_fonts/font = SubResource( 1 )
text = "x0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 286.939, 244.464 )
scale = Vector2( 2, 2 )
frames = SubResource( 2 )
playing = true

[node name="PrimaryWeapon" type="Sprite" parent="."]
position = Vector2( 442.989, 156.36 )
texture = ExtResource( 4 )

[node name="SecondaryWeapon" type="Sprite" parent="."]
position = Vector2( 443.001, 263.624 )
texture = ExtResource( 4 )

[node name="ResumeButton" type="TextureButton" parent="."]
margin_left = 550.0
margin_top = 125.0
margin_right = 993.0
margin_bottom = 233.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Label" parent="ResumeButton"]
margin_left = 75.4349
margin_top = 15.4142
margin_right = 377.435
margin_bottom = 100.414
custom_fonts/font = SubResource( 3 )
text = "Resume"

[node name="RestartButton" type="TextureButton" parent="."]
margin_left = 550.0
margin_top = 200.0
margin_right = 993.0
margin_bottom = 308.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Label" parent="RestartButton"]
margin_left = 67.6567
margin_top = 17.4142
margin_right = 381.657
margin_bottom = 102.414
custom_fonts/font = SubResource( 3 )
text = "Restart"

[node name="TitleButton" type="TextureButton" parent="."]
margin_left = 550.0
margin_top = 275.0
margin_right = 993.0
margin_bottom = 383.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="TitleButton"]
margin_left = 138.485
margin_top = 17.5355
margin_right = 315.485
margin_bottom = 102.536
custom_fonts/font = SubResource( 3 )
text = "Title"

[connection signal="pressed" from="ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="TitleButton" to="." method="_on_TitleButton_pressed"]
